
Bugs Fixed
----------

- The runzeo script didn't work without a configuration file.
  (https://bugs.launchpad.net/zodb/+bug/410571)

- Officially deprecated PersistentDict
  (https://bugs.launchpad.net/zodb/+bug/400775)

- Small optimization of packing file storages with blobs.

- Calling __setstate__ on a persistent object could under certain
  uncommon cause the process to crash.

3.9.0b5 (2009-08-06)
====================

Bugs Fixed
----------

- Fixed vulnerabilities in the ZEO network protocol that allow:

  - CVE-2009-0668 Arbitrary Python code execution in ZODB ZEO storage servers
  - CVE-2009-0669 Authentication bypass in ZODB ZEO storage servers

  The vulnerabilities only apply if you are using ZEO to share a
  database among multiple applications or application instances and if
  untrusted clients are able to connect to your ZEO servers.

3.9.0b4 (2009-07-30)
====================

Bugs Fixed
----------

- Sources were ommitted due to setup script problems.

3.9.0b3 (2009-07-30)
====================

Bugs Fixed
----------

- Simplified the setup script in hopes of working with bdist_rpm.

- Fixed the setup test command.  It previously depended on private
  functions in zope.testing.testrunner that don't exist any more.

- ZEO client threads were unnamed, making it hard to debug thread
  management.

- ZEO protocol 2 support was broken.  This caused very old clients to
  be unable to use new servers.

- zeopack was less flexible than it was before.  -h should default to
  local host.

- The "lawn" layout was being selected by default if the root of
  the blob directory happened to contain a hidden file or directory
  such as ".svn".  Now hidden files and directories are ignored
  when choosing the default layout.

- BlobStorage was not compatible with MVCC storages because the
  wrappers were being removed by each database connection.  Fixed.

Features added back
-------------------

- Warn rather than fail if DB.open is called with an empty version