@@ -663,7 +663,22 @@ class EstimatedSizeTests(ZODB.tests.util.TestCase):
         self.assert_(cache.total_estimated_size >= 0)
 
 
+class class_that_ignores_deactivate(Persistent):
+    def _p_deactivate(self): pass
 
+def loading_objects_that_ignore_deactivate_bug_185066():
+    """See https://bugs.launchpad.net/bugs/185066
+
+    >>> db = ZODB.tests.util.DB()
+    >>> conn = db.open()
+    >>> conn.root.c = class_that_ignores_deactivate()
+    >>> conn.root.c.x = 1
+    >>> transaction.commit()
+    >>> conn2 = db.open()
+    >>> conn2.root.c.x
+    1
+
+    """
 
 
 
