@@ -19,6 +19,9 @@ Bugs Fixed
 - Calling __setstate__ on a persistent object could under certain
   uncommon cause the process to crash.
 
+- Objects defining _p_deactivate methods that didn't call base methods
+  weren't loaded properly. https://bugs.launchpad.net/zodb/+bug/185066
+
 3.9.0b5 (2009-08-06)
 ====================
 
